<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lazy Apk</string>
    <string name="menu_sources">Sources</string>
    <string name="sources">Sources</string>
    <string name="no_builds_available">Nothing here yet.</string>
    <string name="add_source">Add</string>
    <string name="fa_link"></string>
    <string name="fa_chevron_right"></string>
    <string name="Number">Number:</string>
    <string name="failed_to_get_external_download_directory">Could not find downloads directory</string>
    <string name="install_apk">Install</string>
    <string name="download">Download</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="address_hint">http(s)://server.address.com/</string>
    <string name="username">User name</string>
    <string name="username_hint">Login</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="source_type">Source type</string>
    <string name="address_required">Address is required</string>
    <string name="address_looks_invalid">Address looks invalid</string>
    <string name="username_required">User name is required</string>
    <string name="password_required">Password is required</string>
    <string name="remove_source">Remove</string>
    <string name="fa_plus"></string>

    <string-array name="source_types">
        <item>Team City</item>
    </string-array>

</resources>
