<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".HomeActivity"
    android:animateLayoutChanges="true"
    tools:ignore="MissingPrefix">

    <include layout="@layout/empty_toolbar"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mainList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listDivider="@drawable/divider"
            />

    </android.support.v4.widget.SwipeRefreshLayout>
    <RelativeLayout
        android:id="@+id/emptyBuildsContainer"
        android:visibility="gone"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">
        <TextView
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/no_builds_available"/>
        <LinearLayout
            android:id="@+id/addBuildSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_link"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                style="@style/FontAwesome"/>
            <TextView
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_source"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
